# drnum

./: .gitignore  README.md  blockcfd.pro  cartesianpatch.cpp  cartesianpatch.h  cylinderincartisianpatch.cpp  patch.h
doxygen/: annotated.html  (+51 more)
src/: CMakeLists.txt  Cylinder.pvsm  Doxyfile  FFS_comparison.pvsm  ForwardFacingStep.pvsm  ausmtools.h  blockcfd.cpp  blockcfd.h  blockcfd.pro  blockcfd_cuda.h  blockobject.cpp  blockobject.h  cartboxobject.cpp  cartboxobject.h  cartesianpatch.cpp  cartesianpatch.h  cartesianpatch_common.h  cartesianpatchoperation.h  cartesianraster.cpp  codestring.cpp  compressiblecartesianpatch.cpp  compressiblecartesianpatch.h  compressiblecartesianpatchoperation.h  compressibleobject.h  compressiblevariables.h  cubeincartisianpatch.cpp  cubeincartisianpatch.h  cudatools.h  debug.cpp  debug.h  donor_t.h  drnum.pri  drnum.pro  drnum.py  external_aero.h  genericoperation.h  gpu_cartesianpatch.h  gpu_patch.h  gpu_rungekutta.h  intercoeff.h  (+40 more)
src/Python/: drnum.py  loglaw.py  update_licence.py
src/applications/: CMakeLists.txt  applications.pro  drnum_app.pri
src/applications/drnumBaseFlowDemo/: CMakeLists.txt  baseflowflux.h  main.h
src/applications/drnumBasicAero/: CMakeLists.txt  drnumBasicAero.pro  main.cpp  main.cu  main.h
src/applications/drnumCylinder/: CMakeLists.txt  drnumCylinder.pro  main.cpp  main.h
src/applications/drnumJetDemo/: CMakeLists.txt  eaflux.h  jetflux.h  main.cpp  main.cu  main.h
src/applications/drnumSonicFoam/: drnumInit.H  drnumInit.h  drnumOverwrite.H  drnumSonicFoam.C  drnumStop.H  drnumSync.H
src/applications/testBlockObjects/: compressibleeulerlsobc.cpp  compressibleeulerlsobc.h  compressiblesimpleswalllsobc.cpp  compressiblesimpleswalllsobc.h  compressibleswalllsobc.cpp  compressibleswalllsobc.h  geoblockobjecttest001.h  geoblockobjecttest002.h  geoblockobjecttest003.h  geoblockobjecttest004.h  geoblockobjecttest005.h  geoblockobjecttest006.h  geolevelsettest001.h  geolevelsettest002.h  geolevelsettest007.h  main.cpp  main.h  testBlockObjects.pro
src/boundary_conditions/: compressibleeulerwall.h
src/code_blocks/: ausm_plus_x.h  cartesian_projection.h  compressible_residuals.h  compressible_variables.h  minmod.h
src/doc/: iterators.dox
src/drnumlib/: CMakeLists.txt  LSLayerData.h  blockcfd.cpp  blockcfd.h  blockobject.cpp  blockobject.h  blockobjectbc.cpp  blockobjectbc.h  cartboxlevelset.cpp  cartboxlevelset.h  cartboxobject.cpp  cartboxobject.h  cartesiancycliccopy.h  cartesianpatch.cpp  cartesianpatch.h  cartesianpatch_common.h  cartesianraster.cpp  cartesianraster.h  codestring.cpp  codestring.h  combilevelset.cpp  combilevelset.h  combilevelsetand.cpp  combilevelsetand.h  combilevelsetandnot.cpp  combilevelsetandnot.h  combilevelsetor.cpp  combilevelsetor.h  combiobject.cpp  combiobject.h  combiobjectand.cpp  combiobjectand.h  combiobjectandnot.cpp  combiobjectandnot.h  combiobjector.cpp  combiobjector.h  compressibleeulerbobc.cpp  compressibleeulerbobc.h  compressiblelschamber.h  compressiblelsslip.h  (+110 more)
src/drnumlib/LITTER/: blockobject.h_old1  cartboxobject.cpp_old1  cartboxobject.h_old1
src/drnumlib/fluxes/: ausm.h  ausmdv.h  ausmplus.h  compressiblefarfieldflux.h  compressibleflux.h  compressibleslipflux.h  compressiblesmagorinskyflux.h  compressibleviscflux.h  compressiblewallflux.h  knp.h  kt.h  ktmod.h  roe.h  vanleer.h
src/drnumlib/iterators/: cartesianiterator.h  gpu_cartesianiterator.h  gpu_patchiterator.h  patchiterator.h  tpatchiterator.h
src/drnumlib/math/: coordtransform.cpp  coordtransform.h  coordtransformvv.cpp  coordtransformvv.h  linsolve.h  mathvector.h  mathvector_methods.h  mathvector_operators.h  mathvector_structs.h  smallsquarematrix.h
src/drnumlib/reconstruction/: minmod.h  roelim.h  secondorder.h  upwind1.h  upwind2.h  upwindcentral.h  vanalbada.h  vanleerlim.h
src/examples/: cpuduct.h  cpujet.h  cpujet_mb1.h  cpujet_mb_grid1.h  cpujet_pg.h  cpujet_pg_dual_1.h  cpujet_pg_single.h  ffs1.h  flatplate.h  gpujet.h  interpolation1.h  jet_common.h  jet_pg_common.h  jetflux.h  kelvinhelmholtz.h  overexpandedjet2d.h  tjunction.h  two_patches_1.h  two_patches_2.h  two_patches_3.h  wedge.h
src/fluxes/: ausm.h  ausm_plus_x.h  ausmbase.h  ausmdv.h  ausmplus.h  compressiblefarfieldflux.h  compressibleflux.cpp  compressibleflux.h  compressibleslipflux.h  compressibleviscflux.h  compressiblewallflux.h  knp.h  kt.h  ktmod.h
src/grid/: jet_dual_1.grid  jet_single.grid
src/iterators/: cartesiandirectionalpatchoperation.h  cartesianiterator.h  cartesianpatchoperation.h  cartesianstandarditerator.h  cartesianstandardpatchoperation.h  gpu_cartesianiterator.h  gpu_patchiterator.h  patchiterator.h  tpatchiterator.h
src/limiter/: first_order.h  minmod.h  second_order.h  superbee.h  van_albada1.h  van_albada2.h  van_leer.h
src/litter/: cartesianraster.cpp_save1  cartesianraster.h_save1  structuredhexraster.h_save1
src/math/: coordtransform.cpp  coordtransform.h  coordtransformvv.cpp  coordtransformvv.h  mathvector.h  smallsquarematrix.h
src/reconstruction/: first_order.h  immersedboundaryreconstruction.h  limited_reconstruction.h  limitedreconstruction.cpp  limitedreconstruction.h  minmod.h  roelim.h  second_order.h  secondorder.h  superbee.h  upwind1.h  upwind2.h  upwindcentral.h  van_albada1.h  van_albada2.h  van_leer.h  vanalbada.h  vanleerlim.h
src/shapes/: box.cpp  box.h  cylindery.cpp  cylindery.h  halfspace.cpp  halfspace.h  noshape.h  shape.h  sphere.cpp  sphere.h  triangulatedshape.cpp  triangulatedshape.h
src/shmlib/: CMakeLists.txt  barrier.cpp  barrier.f.h  barrier.h  build_test.sh  ipcexception.cpp  ipcexception.h  ipcobject.cpp  ipcobject.h  mutex.cpp  mutex.f.h  mutex.h  semaphore.cpp  semaphore.h  sharedmemory.cpp  sharedmemory.f.h  sharedmemory.h  shmlib.cpp  shmlib.pro  shock_tube  shock_tube.f  test_read.cpp  test_write.f
src/utility/: List.cc  List.hh  MError.cc  MError.hh  TInsectionList.cc  TInsectionList.hh  TList.cc  TList.hh  mouse_types.hh  namespace_mouse.hh  usparseweightedset.h  weightedset.h  weightedset.h_old1  weightedset.h_old2
(+6 files in other folders)
